start main content 1.1.1

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -446,12 +446,7 @@
     <!--<div class="overlay fixed inset-0 bg-black/40 w-full h-full z-10"></div>-->
 
 
-    <script src="../script/modules/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
-    <script src="../script/DarkMode.js"></script>
-        <script src="../script/script.js"></script></div>
+</div>
 
     <main>
         <section class="home h-[200px] xs:h-auto ">
@@ -466,5 +461,13 @@
         </section>
     </main>
 
+
+
+    <script src="../script/modules/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <script src="../script/DarkMode.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 </html>
